clusters/homelab/apps/quiz-vote/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: quiz-vote
  labels:
    name: quiz-vote
    istio-injection: enabled
