clusters/homelab/apps/quiz-vote/load-gen-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  namespace: quiz-vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: load-generator
  template:
    metadata:
      labels:
        app: load-generator
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: load-generator
          image: registry.cihuyproject.my.id/quiz-vote/load-generator:1.0.0
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
