clusters/homelab/apps/quiz-vote/result-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-api
  namespace: quiz-vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result-api
  template:
    metadata:
      labels:
        app: result-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8001"
        prometheus.io/path: "/metrics"
    spec:
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: result-api
          image: registry.cihuyproject.my.id/quiz-vote/result-api:1.0.1
          ports:
            - containerPort: 8001
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
