clusters/homelab/apps/quiz-vote/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: quiz-vote
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 5000
      targetPort: 5000
      name: http
