clusters/homelab/apps/quiz-vote/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: quiz-vote
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      name: redis
