clusters/homelab/apps/quiz-vote/result-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-api
  namespace: quiz-vote
spec:
  type: ClusterIP
  selector:
    app: result-api
  ports:
    - port: 8001
      targetPort: 8001
      name: http
