clusters/homelab/apps/quiz-vote/vote-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-api
  namespace: quiz-vote
spec:
  type: ClusterIP
  selector:
    app: vote-api
  ports:
    - port: 8000
      targetPort: 8000
      name: http
